--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,13 @@
     android:orientation="vertical"
     android:background="@drawable/empbg1"
     tools:context=".MainActivity">
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:background="@drawable/bgcolor"
-        android:layout_marginTop="80dp"
-        android:layout_marginLeft="60dp"
-        android:layout_marginRight="60dp">
+
+        android:background="@drawable/bgcolor">
 
         <ImageView
             android:layout_width="100dp"
