--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -7,7 +7,7 @@
     android:orientation="horizontal"
     android:baselineAligned="false"
     android:id="@+id/fragmentcontainer"
-    android:background="@drawable/bgcolor"
+android:weightSum="2"
     tools:context=".MainActivity2"
    >
 
@@ -29,16 +29,16 @@
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:name="com.example.ods_tabletmode_task.FragmentA"
-       android:layout_weight="1"
+       android:layout_weight="0.5"
        tools:layout="@layout/fragment_a"
       />
     <fragment
         android:id="@+id/fragmentB"
         android:layout_width="0dp"
         android:name="com.example.ods_tabletmode_task.FragmentB"
-        android:layout_height="match_parent"
-        android:layout_weight="2"
-
+        android:layout_height="wrap_content"
+        tools:layout="@layout/fragment_b"
+        android:layout_weight="1.5"
         />
 
     </LinearLayout>
