--- a/app/src/main/res/layout/custom_recycler.xml
+++ b/app/src/main/res/layout/custom_recycler.xml
@@ -13,12 +13,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
-
+        android:layout_marginLeft="3dp"
+        android:id="@+id/ll1"
+android:background="@drawable/bg_selector"
         android:orientation="vertical"
-        android:padding="10dp"
-        android:background="#DCD6D6"
-        >
+        android:padding="10dp">
+<!--        android:background="#DCD6D6"-->
+<!--        >-->
 
         <TextView
             android:layout_width="300dp"
@@ -27,7 +28,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             android:text="User Name"
-            android:textColor="@color/purple_700"/>
+            />
 
         <TextView
             android:layout_width="300dp"
