--- a/app/src/main/res/layout/fragment_b.xml
+++ b/app/src/main/res/layout/fragment_b.xml
@@ -3,10 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#1D9C27B0"
-    android:layout_gravity="center_horizontal"
-
     tools:context=".FragmentB">
 
 <!--    <androidx.cardview.widget.CardView-->
@@ -14,107 +10,231 @@
 <!--        android:layout_height="wrap_content"-->
 <!--        android:layout_marginTop="60dp"-->
 <!--        >-->
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+
+            android:orientation="vertical">
+            <!-- TODO: Update blank fragment layout -->
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="5dp"
+                android:gravity="start"
+                android:text="Overview"
+                android:layout_marginLeft="12dp"
+                android:textColor="@color/teal_700"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="2dp"
+                android:background="#ABA5A5"
+                android:layout_marginRight="25dp"/>
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_gravity="center_horizontal"
+    android:weightSum="1"
+    android:layout_marginTop="30dp"
+    android:layout_marginLeft="30dp"
+    android:layout_marginRight="30dp">
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
+        android:text="Firstname "
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:textSize="20sp"
+        />
+    <TextView
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.5"
+        android:text="Lastname "
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:textSize="20sp"
+        />
+
+</LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-android:background="@drawable/bgcolor"
-        android:layout_gravity="center"
-       >
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Employee Detailed Information"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:textColor="@color/purple_700"
-        android:gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="100dp"/>
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
+        android:weightSum="1"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="5dp">
+        <TextView
+            android:id="@+id/fnamedispid"
+            android:layout_width="0dp"
+            android:layout_height="42dp"
+            android:layout_weight="0.5"
+            android:layout_gravity="center"
+            android:padding="3dp"
+            android:background="#DFE5EEED"
+           android:layout_marginRight="10dp"
+            android:textSize="20sp"
+            />
+        <TextView
+            android:id="@+id/lnamedispid"
+            android:layout_width="0dp"
+            android:layout_height="42dp"
+            android:layout_weight="0.5"
+            android:padding="3dp"
+            android:layout_marginLeft="10dp"
+            android:background="#DFE5EEED"
+            android:textSize="20sp"
+            />
 
+    </LinearLayout>
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_margin="30dp"
-            android:weightSum="2"
-
-            android:layout_gravity="center_horizontal">
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/fnamedispid"
-                android:layout_weight="1"
-                android:layout_margin="10dp"
-                android:hint="Firstname"
-android:textColor="@color/black"
-                android:textSize="20sp"/>
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:hint="Last Name"
-                android:layout_weight="1"
-                android:layout_margin="10dp"
-                android:id="@+id/lnamedispid"
-                android:textSize="20sp"/>
-
-        </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_margin="30dp"
-        android:weightSum="2"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:weightSum="1"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/maildispid"
-            android:layout_weight="1"
-            android:layout_margin="10dp"
-            android:hint="Mail"
-
-            android:textSize="20sp"/>
+            android:layout_weight="0.5"
+            android:text="E-mail "
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:textSize="20sp"
+            />
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Mobile"
-            android:layout_weight="1"
-            android:layout_margin="10dp"
-            android:id="@+id/mobiledispid"
-            android:textSize="20sp"/>
+            android:layout_weight="0.5"
+            android:text="Mobile "
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:textSize="20sp"
+            />
 
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:layout_margin="30dp"
-        android:weightSum="2"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:weightSum="1"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="5dp">
         <TextView
+            android:id="@+id/maildispid"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/desgdispid"
-            android:layout_weight="1"
-            android:layout_margin="10dp"
-            android:hint="Designation"
+            android:layout_height="42dp"
+            android:layout_weight="0.5"
+            android:background="#DFE5EEED"
+            android:layout_marginRight="10dp"
+            android:padding="3dp"
+            android:textSize="20sp"
+            />
+        <TextView
+            android:id="@+id/mobiledispid"
+            android:layout_width="0dp"
+            android:layout_height="42dp"
+            android:padding="3dp"
+            android:layout_weight="0.5"
+            android:layout_marginLeft="10dp"
+            android:background="#DFE5EEED"
+            android:textSize="20sp"
+            />
 
-            android:textSize="20sp"/>
-        //
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
+        android:weightSum="1"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp">
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Date of Joining"
-            android:layout_weight="1"
-            android:layout_margin="10dp"
+            android:layout_weight="0.5"
+            android:text="Designation "
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:textSize="20sp"
+            />
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.5"
+            android:text="Date of Joining "
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:textSize="20sp"
+            />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_gravity="center_horizontal"
+        android:weightSum="1"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="5dp">
+        <TextView
+            android:id="@+id/desgdispid"
+            android:layout_width="0dp"
+            android:layout_height="42dp"
+            android:layout_weight="0.5"
+            android:background="#DFE5EEED"
+            android:layout_marginRight="10dp"
+            android:padding="3dp"
+            android:textSize="20sp"
+            />
+        <TextView
             android:id="@+id/dojdispid"
-            android:textSize="20sp"/>
+            android:layout_width="0dp"
+            android:layout_height="42dp"
+            android:layout_weight="0.5"
+            android:layout_marginLeft="10dp"
+            android:padding="3dp"
+            android:background="#DFE5EEED"
+            android:textSize="20sp"
+            />
 
     </LinearLayout>
 </LinearLayout>
-    </androidx.cardview.widget.CardView>
+
+
+
+
+        </LinearLayout>
+    </ScrollView>
+</androidx.cardview.widget.CardView>
